@@ -30,6 +30,8 @@ Revision history for Fatal
         * TEST: Internal tests moved from Fatal.t to
           internal.t
 
+        * FEATURE: Added support for fileno.
+
 1.11_01 Fri Jul  4 12:53:11 AEST 2008
 
         * RELEASE CODENAME: "Aristotle", in thanks for the many
